# assesslite

./: .Rbuildignore  .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  DESCRIPTION  NAMESPACE  README.md  ROADMAP.md
.github/workflows/: publish.yml  test.yml
R/: audit.R  autocorrelation.R  decision.R  export.R  graph.R  invariance.R  lattice.R  network.R  positivity.R  report.R  scenarios.R  sensitivity.R  spatial.R  stability.R  transformations.R
inst/examples/: worked-example-audit.json  worked-example-report.html  worked-example.R
man/: assume_invariance.Rd  assumption_lattice.Rd  decide.Rd  declare_graph.Rd  invariance_vocabulary.Rd  reject_invariance.Rd  render_report.Rd  structural_audit.Rd  test_invariance.Rd  write_audit.Rd
paper/: paper.bib  paper.md
python/: README.md  pyproject.toml
python/examples/: worked-example-audit.json  worked-example-report.html  worked_example.py
python/src/assesslite/: __init__.py  autocorrelation.py  core.py  decision.py  estimator.py  export.py  graph.py  lattice.py  network.py  positivity.py  report.py  scenarios.py  sensitivity.py  spatial.py  stability.py  transformations.py
python/tests/: test_core.py
spec/: lattice.md  network.md  positivity.md  scenarios.md  spatial.md
spec/abstention/: rules.md
spec/graph/: adjustment.md  graph-check.md
spec/reporting/: report-structure.md
spec/schema/: audit.schema.json  example-declaration.yaml  identification-status.md  invariance-vocabulary.md
spec/stability/: metrics.md  sensitivity.md
spec/transformations/: transformations.md
tests/: testthat.R
tests/testthat/: test-core.R
validation/: README.md
validation/stageA/: assesslite_islands.py  assesslite_stageA.py  batch2.py  islands_natural.py  onco_claimtest.py  reflexivity.py  reflexivity2.py  replicate.py  replicate2.py  rho_dist.py  stageA_final.py  verify_detector.py
vignettes/: assesslite.Rmd
