[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "assesslite"
version = "0.3.0"
description = "AssessLite: test what your analysis depends on — structural assumption assessment for causal analysis"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Heidi Andersén", email = "andersenheidihelena@gmail.com" }]
keywords = ["causal inference", "sensitivity analysis", "invariance", "assumptions", "epidemiology"]
dependencies = [
    "numpy>=1.22",
    "pandas>=1.4",
]

[project.optional-dependencies]
test = ["pytest>=7", "jsonschema>=4"]

[project.urls]
Homepage = "https://github.com/heidihelena/assesslite"
Issues = "https://github.com/heidihelena/assesslite/issues"

[tool.setuptools.packages.find]
where = ["src"]
