[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "assesslite"
version = "0.3.0"
description = "AssessLite: test what your analysis depends on — structural assumption assessment for causal analysis"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "Heidi Andersén", email = "andersenheidihelena@gmail.com" }]
keywords = ["causal inference", "sensitivity analysis", "invariance", "assumptions", "epidemiology"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.22",
    "pandas>=1.4",
]

[project.optional-dependencies]
test = ["pytest>=7", "jsonschema>=4"]

[project.urls]
Homepage = "https://github.com/heidihelena/assesslite"
Issues = "https://github.com/heidihelena/assesslite/issues"

[tool.setuptools.packages.find]
where = ["src"]
